--- a/Porsche/src/index.html
+++ b/Porsche/src/index.html
@@ -5,7 +5,7 @@
   <title>Porsche</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="Porsche/src/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/images/Porsche.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
